# fg_control

./: CMakeLists.txt  Numerical_Model.ipynb  README.md  aircraft-state.xml  data.py  flight-controls.xml
include/: flight_controller.h  udp_io.h
src/: flight_controller.cpp  main.cpp  udp_io.cpp
